chore: exclude archived directory from version control
Add archived/ to .gitignore as it contains experimental tests
with node_modules and temporary files.

--- a/.gitignore
+++ b/.gitignore
@@ -292,6 +292,9 @@ cython_debug/
 # Excluded projects (moved out of main repo)
 IdeaProjects_Excluded/
 
+# Archived experimental tests
+archived/
+
 # Server state files
 server_state.json
 nul
