chore: aggressive cleanup of remaining unnecessary files
Remove:
- All redundant markdown files (docs/, reports, tech debt files)
- Duplicate nested directories (Backend/Backend, Frontend/Frontend)
- Test directories (test_output, test_reports, archive)
- Cache directories (__pycache__, .pytest_cache, .ruff_cache)
- Utility scripts (create_test_videos, init_vocabulary, etc.)
- Debug and test batch files
- Backup and test video files

Update .gitignore to prevent these files from being tracked again.
Keep only essential production files.

--- a/.gitignore
+++ b/.gitignore
@@ -301,3 +301,12 @@ test_*.html
 
 # Repomix output
 repomix-output.xml
+
+# Test and debug files
+test_results_*.json
+test_output/
+test_reports/
+debug_*.py
+**/test_*.py
+**/*.backup
+test_video.mp4
