--- a/Backend/requirements-dev.txt
+++ b/Backend/requirements-dev.txt
@@ -11,6 +11,7 @@ python-multipart==0.0.7
 sqlalchemy>=2.0.0
 aiosqlite>=0.19.0
 psycopg2-binary>=2.9.0
+alembic>=1.13.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 psutil>=5.9.0
