--- a/Backend/pytest.ini
+++ b/Backend/pytest.ini
@@ -3,30 +3,13 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = 
-    -v
-    --tb=short
-    --strict-markers
-    --disable-warnings
-    --maxfail=5
-    --timeout=30
-    --timeout-method=thread
-    -p no:warnings
-    --cov-branch
-    --cov=api
-    --cov=core
-    --cov=management
-    --cov-report=term-missing
-    --cov-report=html
-    --cov-fail-under=70
+addopts = -v --tb=short
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
-    ignore::pytest.PytestCollectionWarning
 markers =
-    slow: marks tests as slow (deselect with '-m "not slow"')
+    slow: marks tests as slow
     integration: marks tests as integration tests
     unit: marks tests as unit tests
     performance: marks tests as performance tests
 asyncio_mode = auto
-timeout = 30
