--- a/Backend/requirements-dev.txt
+++ b/Backend/requirements-dev.txt
@@ -12,9 +12,14 @@ sqlalchemy>=2.0.0
 aiosqlite>=0.19.0
 psycopg2-binary>=2.9.0
 alembic>=1.13.0
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+fastapi-users[sqlalchemy]>=12.1.3
 psutil>=5.9.0
+
+# Utilities
+pysrt>=1.1.2
+structlog>=23.1.0
+sentry-sdk[fastapi]>=1.32.0
+python-jose[cryptography]>=3.3.0
 
 # Test client + tools
 httpx>=0.26.0
