Implement robust FastAPI route testing framework
- Add named routes to all FastAPI endpoints for URL stability
- Create URL builder utility for dynamic URL generation in tests
- Organize test structure with robust/ and utils/ directories
- Add comprehensive documentation and migration guide
- Create robust test implementations for auth, video, vocab, processing, performance
- Update pytest configuration with new test markers
- Add conversion utility to scan for hardcoded URLs
- Fix import paths and module organization

--- a/Backend/pytest.ini
+++ b/Backend/pytest.ini
@@ -12,4 +12,7 @@ markers =
     integration: marks tests as integration tests
     unit: marks tests as unit tests
     performance: marks tests as performance tests
+    robust: marks tests as using robust URL patterns
+    auth: marks tests as requiring authentication
+    security: marks tests as security-related
 asyncio_mode = auto
