Update backend infrastructure and utilities
- Enhance database models and migration handling with Alembic
- Add comprehensive diagnostic and health check scripts
- Improve vocabulary loading and management utilities
- Update development requirements and pytest configuration
- Enhance backend startup and cleanup automation scripts
- Add robust schema application and database validation
- Improve architectural review and monitoring capabilities
- Update SRT parsing and file processing utilities

--- a/Backend/pytest.ini
+++ b/Backend/pytest.ini
@@ -6,6 +6,8 @@ addopts =
     --strict-config
     --tb=short
     --disable-warnings
+    --timeout=60
+    --timeout-method=thread
 
 # Warning filters - suppress known warnings
 filterwarnings =
@@ -13,6 +15,7 @@ filterwarnings =
     ignore::PendingDeprecationWarning
     ignore:.*unclosed.*:ResourceWarning
     ignore:.*Pydantic.*:UserWarning
+    ignore:.*pkg_resources.*:UserWarning
 
 # Test markers
 markers =
@@ -26,6 +29,7 @@ markers =
 
 # Configure asyncio mode to auto-handle async functions
 asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
 
 # Test paths
 testpaths = tests
