--- a/Backend/requirements-dev.txt
+++ b/Backend/requirements-dev.txt
@@ -21,15 +21,39 @@ structlog>=24.0.0
 sentry-sdk[fastapi]>=2.0.0
 python-jose[cryptography]>=3.3.0
 
-# Test client + tools - Updated for compatibility
-httpx>=0.27.0,<0.29.0
-anyio>=4.6.0,<5.0.0
-trio>=0.25.0
-requests>=2.31.0
-pytest>=8.0.0
-pytest-asyncio>=0.24.0
-pytest-timeout>=2.1.0
-pytest-cov>=5.0.0
+# Development dependencies for LangPlug backend
+# Core development tools
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.0.0
+pytest-xdist>=3.0.0
+pytest-timeout>=2.0.0
+hypothesis>=6.0.0
+pre-commit>=3.0.0
+black>=23.0.0
+flake8>=6.0.0
+mypy>=1.0.0
+bandit>=1.7.0
+
+# Type checking and linting
+types-requests>=2.0.0
+types-PyYAML>=6.0.0
+
+# Database drivers for testing
+aiosqlite>=0.19.0
+
+
+# HTTP clients for testing
+httpx>=0.24.0
+respx>=0.20.0
+
+# Async libraries
+anyio>=3.7.0
+trio>=0.22.0
+
+# Testing utilities
+freezegun>=1.2.0
+responses>=0.23.0
 
 # Linting and formatting
 ruff>=0.7.0
