Add unified testing framework for LangPlug application
- Created package.json for managing test scripts and dependencies.
- Implemented CI test runner to orchestrate backend, frontend, and E2E tests with appropriate timeouts.
- Developed script to run all tests sequentially, ensuring server readiness before execution.
- Configured TypeScript settings in tsconfig.json for strict type checking and module resolution.
- Built ServerManager utility to handle starting, stopping, and checking readiness of backend and frontend servers.
- Created TestRunner utility to execute backend, frontend, and E2E tests with error handling.

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,10 +30,12 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.2.1",
-    "cypress": "^13.17.0",
+    "@vitejs/plugin-react-swc": "^4.1.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "kill-port": "^2.0.1",
+    "puppeteer": "^24.22.0",
     "typescript": "^5.0.2",
     "vite": "^4.1.0",
     "vitest": "^3.2.4"
@@ -46,10 +48,8 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "e2e": "cypress run --spec 'cypress/e2e/**/*'",
-    "e2e:open": "cypress open --e2e",
+    "test:e2e": "cd ../tests/e2e && npx ts-node test-runner.ts",
+    "test:all": "cd ../tests && npx ts-node scripts/run-all-tests.ts",
     "generate-client": "openapi-ts",
     "prebuild": "npm run generate-client"
   },
