feat: implement translation service integration in processing pipeline

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -45,7 +45,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
     "test:e2e": "cd ../tests/e2e && npx ts-node test-runner.ts",
