feat(client): add API client core types and services
refactor(test): update test configurations and dependencies

fix(e2e): improve test reliability and error handling

docs: add comprehensive testing documentation

chore: update package dependencies for testing

style: format test files consistently

test: add unit tests for auth service and components

ci: enhance test runner configurations

build: add new dev dependencies for testing

perf: optimize test execution with parallelization

--- a/Backend/pytest.ini
+++ b/Backend/pytest.ini
@@ -1,16 +1,73 @@
 [pytest]
-addopts = -v --tb=short
+# Best practice pytest configuration for LangPlug Backend
 testpaths = tests
 python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
 asyncio_mode = auto
+
+# Comprehensive test options
+addopts = 
+    -v 
+    --tb=short 
+    --strict-markers
+    --cov=core
+    --cov=api
+    --cov=services
+    --cov-report=term-missing
+    --cov-report=html
+    --cov-report=json
+    --cov-fail-under=80
+    --maxfail=1
+    --disable-warnings
+    -p no:warnings
+
+# Test markers for organization
 markers =
-    unit: Unit tests
-    integration: Integration tests
-    api: API endpoint tests
+    unit: Unit tests (isolated, fast, no external dependencies)
+    integration: Integration tests (may use database, external services)
+    e2e: End-to-end tests (full workflow tests)
+    slow: Slow running tests (deselect with '-m "not slow"')
+    critical: Critical tests that must always pass
+    smoke: Smoke tests for quick validation
+    contract: Contract validation tests
+    performance: Performance tests
+    security: Security-related tests
+    asyncio: Async tests requiring event loop
+
+# Test discovery patterns
+norecursedirs = .git .tox dist build *.egg api_venv venv
+
+# Logging configuration for tests
+log_cli = false
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)8s] %(message)s
+log_cli_date_format = %Y-%m-%d %H:%M:%S
+
+# Coverage configuration
+[coverage:run]
+source = .
+omit = 
+    */tests/*
+    */test_*.py
+    */conftest.py
+    */migrations/*
+    */api_venv/*
+    */venv/*
+    */__pycache__/*
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    raise AssertionError
+    raise NotImplementedError
+    if __name__ == .__main__.:
+    if TYPE_CHECKING:
+    @abstract
     slow: Slow tests
     xfail: Expected to fail tests
 
 filterwarnings =
     ignore::UserWarning:whisper.*
-    ignore::RuntimeWarning:.*coroutine.*never awaited.*
     ignore::pytest.PytestCacheWarning
