--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,19 +23,22 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@hey-api/openapi-ts": "^0.50.0",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "@hey-api/openapi-ts": "^0.50.0",
     "@vitejs/plugin-react-swc": "^4.1.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "kill-port": "^2.0.1",
+    "msw": "^2.11.3",
     "puppeteer": "^24.22.0",
     "typescript": "^5.0.2",
     "vite": "^4.1.0",
