Fix Dockerfile path in docker build workflow

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,10 +26,10 @@ jobs:
         
         WORKDIR /app
         
-        COPY Backend/requirements*.txt ./
+        COPY requirements*.txt ./
         RUN pip install --no-cache-dir -r requirements.txt
         
-        COPY Backend/ .
+        COPY . .
         
         EXPOSE 8000
         
