fix: disable coverage thresholds for sharded tests and fix Docker build
- Disable vitest coverage thresholds for sharded tests in CI workflow
  (thresholds can't be checked per shard, only on merged coverage)
- Fix Docker build by bypassing prebuild hook that needs openapi_spec.json
  (use direct tsc + vite build instead of yarn build)

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -188,8 +188,8 @@ jobs:
           # Copy source code
           COPY . .
 
-          # Build the application
-          RUN yarn build
+          # Build the application (skip prebuild hooks that require openapi_spec.json)
+          RUN npx tsc && npx vite build
 
           # Production stage with nginx
           FROM nginx:alpine as production
