--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -64,6 +64,8 @@ jobs:
               pytest -q tests/integration/test_inprocess_*.py --cov-report=xml --cov-report=html
               ;;
           esac
+        env:
+          LANGPLUG_SECRET_KEY: test-secret-key-for-ci-only-not-for-production-use
 
       - name: Generate Coverage Report
         uses: ./.github/actions/coverage-report
