fix: add missing websockets dependency and complete logger mock
- Add websockets>=12.0 to Backend requirements-dev.txt for WebSocket manager support
- Add error method to logger mock in ChunkedLearningFlow.test.tsx

Generated with assistance

--- a/Backend/requirements-dev.txt
+++ b/Backend/requirements-dev.txt
@@ -24,6 +24,9 @@ python-jose[cryptography]>=3.3.0
 # NLP dependencies (required for lemmatization in tests)
 spacy>=3.8.0,<4.0.0
 
+# WebSocket dependencies
+websockets>=12.0
+
 # Development dependencies for LangPlug backend
 # Core development tools
 pytest>=8.0.0
