--- a/Backend/requirements-dev.txt
+++ b/Backend/requirements-dev.txt
@@ -20,6 +20,7 @@ pysrt>=1.1.2
 structlog>=24.0.0
 sentry-sdk[fastapi]>=2.0.0
 python-jose[cryptography]>=3.3.0
+passlib[argon2]>=1.7.4
 
 # NLP dependencies (required for lemmatization in tests)
 spacy>=3.8.0,<4.0.0
