fix: add LANGPLUG_SECRET_KEY to all workflow env vars
- Updated deploy.yml to use LANGPLUG_SECRET_KEY instead of SECRET_KEY
- Added LANGPLUG_SECRET_KEY to unit-tests.yml
- Added LANGPLUG_SECRET_KEY to contract-tests.yml
- Fixes pydantic validation error during conftest import

--- a/.github/workflows/contract-tests.yml
+++ b/.github/workflows/contract-tests.yml
@@ -79,6 +79,7 @@ jobs:
         working-directory: ./Backend
         env:
           DATABASE_URL: postgresql://testuser:testpass@localhost:5432/testdb
+          LANGPLUG_SECRET_KEY: test-secret-key
           ENVIRONMENT: test
         run: |
           # Run contract-specific tests
