--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
         env:
           DATABASE_URL: postgresql://test:test@localhost:5432/test_langplug
           REDIS_URL: redis://localhost:6379
-          SECRET_KEY: test-secret-key
+          LANGPLUG_SECRET_KEY: test-secret-key
         run: |
           python -m pytest tests/ -v --cov=. --cov-report=xml
 
