--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Run backend unit tests
         working-directory: ./Backend
+        env:
+          LANGPLUG_SECRET_KEY: test-secret-key
         run: |
           python -m pytest tests/ -v --tb=short -m "not e2e and not integration" || echo "Backend tests failed, but continuing"
 
