fix: use 32+ character secret key in workflows
- LANGPLUG_SECRET_KEY must be at least 32 characters
- Updated all workflow files to use longer test key
- Fixes pydantic validation error: string_too_short

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
         env:
           DATABASE_URL: postgresql://test:test@localhost:5432/test_langplug
           REDIS_URL: redis://localhost:6379
-          LANGPLUG_SECRET_KEY: test-secret-key
+          LANGPLUG_SECRET_KEY: test-secret-key-for-ci-only-not-for-production-use
         run: |
           python -m pytest tests/ -v --cov=. --cov-report=xml
 
