--- a/.github/workflows/contract-tests.yml
+++ b/.github/workflows/contract-tests.yml
@@ -79,7 +79,7 @@ jobs:
         working-directory: ./Backend
         env:
           DATABASE_URL: postgresql://testuser:testpass@localhost:5432/testdb
-          LANGPLUG_SECRET_KEY: test-secret-key
+          LANGPLUG_SECRET_KEY: test-secret-key-for-ci-only-not-for-production-use
           ENVIRONMENT: test
         run: |
           # Run contract-specific tests
