--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
           LANGPLUG_SECRET_KEY: test-secret-key-for-ci-only-not-for-production-use
           SKIP_HEAVY_AI_TESTS: "1"
         run: |
-          python -m pytest tests/ --cov=api --cov=core --cov=services --cov-report=xml --tb=short
+          python -m pytest tests/ --cov=api --cov=core --cov=services --cov-report=xml --cov-fail-under=60 --tb=short
 
       - name: Upload Backend coverage
         uses: codecov/codecov-action@v3
@@ -88,7 +88,7 @@ jobs:
 
       - name: Run Frontend tests
         working-directory: ./Frontend
-        run: npm test -- --coverage --watchAll=false
+        run: npm test -- --coverage
 
       - name: Build Frontend
         working-directory: ./Frontend
