--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -61,7 +61,7 @@ jobs:
               pytest -q tests/management --cov=management --cov-report=xml --cov-report=html --cov-fail-under=45
               ;;
             integration)
-              pytest -q tests/integration/test_inprocess_*.py --cov=api --cov=core --cov=services --cov-report=xml --cov-report=html
+              pytest -q tests/integration/test_inprocess_*.py --cov=api --cov=core --cov=services --cov-report=xml --cov-report=html --cov-fail-under=20
               ;;
           esac
         env:
