--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -34,13 +34,13 @@ jobs:
       - name: Run Bandit security scan
         working-directory: ./Backend
         run: |
-          bandit -r . -f json -o bandit-report.json || true
+          bandit -r . -f sarif -o bandit-report.sarif || true
 
       - name: Upload Bandit results
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
-          sarif_file: ./Backend/bandit-report.json
+          sarif_file: ./Backend/bandit-report.sarif
           category: bandit
 
       - name: Set up Node.js
