--- a/.github/workflows/tests-nightly.yml
+++ b/.github/workflows/tests-nightly.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Run pytest (in-process integration + API with higher gate)
         env:
+          LANGPLUG_SECRET_KEY: test-secret-key-for-ci-only-not-for-production-use
           PYTEST_ADDOPTS: "--cov-branch --cov=api --cov=core --cov=management --cov-report=term-missing --cov-report=xml --cov-fail-under=70"
         run: |
           pytest -q tests/api tests/integration/test_inprocess_*.py
