perf: add pip caching to workflows for faster builds

--- a/.github/workflows/contract-tests.yml
+++ b/.github/workflows/contract-tests.yml
@@ -63,6 +63,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
+          cache-dependency-path: Backend/requirements.txt
 
       - name: Install backend dependencies
         working-directory: ./Backend
@@ -127,6 +129,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
+          cache-dependency-path: Backend/requirements.txt
 
       - name: Install dependencies
         run: |
