--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
+          cache-dependency-path: |
+            Backend/requirements.txt
+            Backend/requirements-dev.txt
 
       - name: Install Backend dependencies
         working-directory: ./Backend
