chore: delete cache directories and update gitignore
Deleted 135MB+ of cache directories:
- .mypy_cache/ (92MB, 5,736 files)
- htmlcov/ (8.9MB - coverage reports)
- logs/ (34MB - runtime logs)
- .pytest_cache/ (296KB)
- .ruff_cache/ (156KB)
- .benchmarks/ (empty)
- All __pycache__/ directories

Updated Backend/.gitignore to include:
- .mypy_cache/
- .ruff_cache/
- .benchmarks/
- logs/

Root .gitignore already had all patterns. Prevents future cache commits.

--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -18,6 +18,14 @@ build/
 htmlcov/
 test_reports/
 *.log
+.benchmarks/
+
+# Linting & Type Checking
+.mypy_cache/
+.ruff_cache/
+
+# Logs
+logs/
 
 # IDE
 .vscode/
