refactor: archive old plans and analysis reports
Moved all historical analysis reports from plans/ to docs/archive/:
- architecture-analysis-20250929_070129.md
- codereview-FULL-20250927-FINAL-REPORT.md
- debug-analysis-20250929.md
- no-backward-compatibility-rule.md

Deleted empty plans/ directory.

These are historical artifacts from Sept-Oct 2025, preserved for reference
but moved to archive to reduce clutter in root directory structure.

Updated .gitignore: Changed archive/ to /archive/ (root-level only) to allow
docs/archive/ while still excluding root-level archive directories.

--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -54,8 +54,8 @@ data/*/
 .env.local
 .env.*.local
 
-# Archive
-archive/
+# Archive (root-level only, not docs/archive)
+/archive/
 
 # Temporary
 temp/
