refactor: reorganize utility scripts into scripts/ subdirectories
Moved 17 Python scripts from Backend root to organized subdirectories:

- scripts/analysis/ (3): analyze_coverage, metrics_report, run_architecture_tests
- scripts/database/ (2): apply_schema, apply_search_indexes
- scripts/debug/ (3): check_users, verify_admin_login, verify_password_hash
- scripts/setup/ (4): auto_venv, download_parakeet_model, install_spacy_models, venv_activator
- scripts/testing/ (1): run_fast_tests
- scripts/utils/ (4): capture_test_error, cleanup_port, export_openapi, start_backend_with_models

Backend root now only contains essential files: main.py, run_backend.py, setup.py

Updated pyproject.toml to allow print statements and os.path in scripts/

--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -158,10 +158,8 @@ section-order = ["future", "standard-library", "third-party", "first-party", "lo
 "alembic/versions/*.py" = ["E501", "PLR0915"]
 # Init files - allow unused imports
 "__init__.py" = ["F401"]
-# Debug/utility scripts - allow print statements for console output
-"check_users.py" = ["T20"]
-"verify_admin_login.py" = ["T20"]
-"verify_password_hash.py" = ["T20"]
+# Scripts directory - allow print statements, os.path for console utilities
+"scripts/**/*.py" = ["T20", "PTH100", "PTH120"]
 
 # ============================================================================
 # BLACK - Code formatter (Optional - Ruff's formatter is recommended)
