--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -26,29 +26,29 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip"
-          cache-dependency-path: Backend/requirements-dev.txt
+          cache-dependency-path: src/backend/requirements-dev.txt
 
       - name: Install Python dependencies
-        working-directory: ./Backend
+        working-directory: ./src/backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
 
       - name: Run Python linting
-        working-directory: ./Backend
+        working-directory: ./src/backend
         run: |
           echo "Running basic Python syntax check..."
           python -m py_compile $(find . -name "*.py" -not -path "./venv/*" -not -path "./.venv/*")
           echo "Python syntax check completed"
 
       - name: Run Python formatting check
-        working-directory: ./Backend
+        working-directory: ./src/backend
         run: |
           echo "Checking Python code formatting with black..."
           black --check . || echo "Code formatting issues found, but continuing..."
 
       - name: Check for unauthorized pytest skip markers
-        working-directory: ./Backend
+        working-directory: ./src/backend
         run: |
           echo "Checking for unauthorized @pytest.mark.skip markers..."
           python .pre-commit-hooks/check-pytest-skip.py $(find tests -name "*.py" -type f)
@@ -58,17 +58,17 @@ jobs:
         with:
           node-version: "20"
           cache: "yarn"
-          cache-dependency-path: Frontend/yarn.lock
+          cache-dependency-path: src/frontend/yarn.lock
 
       - name: Install frontend dependencies
-        working-directory: ./Frontend
+        working-directory: ./src/frontend
         run: |
           echo "Installing frontend dependencies..."
           corepack enable
           yarn install --frozen-lockfile || echo "Frontend dependency installation failed, but continuing..."
 
       - name: Run frontend linting
-        working-directory: ./Frontend
+        working-directory: ./src/frontend
         run: |
           echo "Running frontend linting..."
           yarn lint || echo "Frontend linting issues found, but continuing..."
