--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -29,16 +29,16 @@ jobs:
         with:
           node-version: "20"
           cache: "yarn"
-          cache-dependency-path: Frontend/yarn.lock
+          cache-dependency-path: src/frontend/yarn.lock
 
       - name: Install dependencies
-        working-directory: ./Frontend
+        working-directory: ./src/frontend
         run: |
           corepack enable
           yarn install --frozen-lockfile
 
       - name: Build
-        working-directory: ./Frontend
+        working-directory: ./src/frontend
         run: yarn build
         env:
           VITE_API_URL: /api
@@ -49,7 +49,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./Frontend/dist
+          path: ./src/frontend/dist
 
   deploy:
     environment:
