--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -29,17 +29,17 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip"
-          cache-dependency-path: Backend/requirements-dev.txt
+          cache-dependency-path: src/backend/requirements-dev.txt
 
       - name: Install Python dependencies
-        working-directory: ./Backend
+        working-directory: ./src/backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
           pip install bandit
 
       - name: Run Bandit security scan
-        working-directory: ./Backend
+        working-directory: ./src/backend
         run: |
           bandit -r . -f sarif -o bandit-report.sarif || true
 
@@ -47,7 +47,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
-          sarif_file: ./Backend/bandit-report.sarif
+          sarif_file: ./src/backend/bandit-report.sarif
           category: bandit
 
       - name: Set up Node.js
@@ -55,15 +55,15 @@ jobs:
         with:
           node-version: "20"
           cache: "yarn"
-          cache-dependency-path: Frontend/yarn.lock
+          cache-dependency-path: src/frontend/yarn.lock
 
       - name: Install frontend dependencies
-        working-directory: ./Frontend
+        working-directory: ./src/frontend
         run: |
           corepack enable
           yarn install --frozen-lockfile
 
       - name: Run npm audit
-        working-directory: ./Frontend
+        working-directory: ./src/frontend
         run: |
           npm audit --audit-level=high || true
