--- a/.github/workflows/tests-nightly.yml
+++ b/.github/workflows/tests-nightly.yml
@@ -11,7 +11,7 @@ jobs:
     timeout-minutes: 30
     defaults:
       run:
-        working-directory: Backend
+        working-directory: src/backend
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -97,7 +97,7 @@ jobs:
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           header: coverage
-          path: Backend/coverage_comment.md
+          path: src/backend/coverage_comment.md
 
       - name: Diff coverage (PRs only, 90% min)
         if: github.event_name == 'pull_request'
@@ -118,17 +118,17 @@ jobs:
           git fetch origin ${{ github.base_ref }} --depth=1 || true
           CHANGED=$(git diff --name-only origin/${{ github.base_ref }}... | tr '\n' ' ')
           echo "Changed files: $CHANGED"
-          if echo "$CHANGED" | grep -q '^Backend/api/'; then
+          if echo "$CHANGED" | grep -q '^src/backend/api/'; then
             echo 'Enforcing API diff line coverage >= 90%'
-            diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --include Backend/api/* --fail-under=90
+            diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --include src/backend/api/* --fail-under=90
           fi
-          if echo "$CHANGED" | grep -q '^Backend/core/'; then
+          if echo "$CHANGED" | grep -q '^src/backend/core/'; then
             echo 'Enforcing CORE diff line coverage >= 90%'
-            diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --include Backend/core/* --fail-under=90
+            diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --include src/backend/core/* --fail-under=90
           fi
-          if echo "$CHANGED" | grep -q '^Backend/management/'; then
+          if echo "$CHANGED" | grep -q '^src/backend/management/'; then
             echo 'Enforcing MANAGEMENT diff line coverage >= 90%'
-            diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --include Backend/management/* --fail-under=90
+            diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --include src/backend/management/* --fail-under=90
           fi
 
       - name: Per-package diff coverage (branches) 80% min
@@ -137,25 +137,25 @@ jobs:
           set -e
           git fetch origin ${{ github.base_ref }} --depth=1 || true
           CHANGED=$(git diff --name-only origin/${{ github.base_ref }}... | tr '\n' ' ')
-          if echo "$CHANGED" | grep -q '^Backend/api/'; then
+          if echo "$CHANGED" | grep -q '^src/backend/api/'; then
             echo 'Enforcing API diff branch coverage >= 80%'
-            diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --branch-coverage --include Backend/api/* --fail-under=80
+            diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --branch-coverage --include src/backend/api/* --fail-under=80
           fi
-          if echo "$CHANGED" | grep -q '^Backend/core/'; then
+          if echo "$CHANGED" | grep -q '^src/backend/core/'; then
             echo 'Enforcing CORE diff branch coverage >= 80%'
-            diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --branch-coverage --include Backend/core/* --fail-under=80
+            diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --branch-coverage --include src/backend/core/* --fail-under=80
           fi
-          if echo "$CHANGED" | grep -q '^Backend/management/'; then
+          if echo "$CHANGED" | grep -q '^src/backend/management/'; then
             echo 'Enforcing MANAGEMENT diff branch coverage >= 80%'
-            diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --branch-coverage --include Backend/management/* --fail-under=80
+            diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --branch-coverage --include src/backend/management/* --fail-under=80
           fi
 
       - name: Append coverage summary to job summary
         if: always()
         run: |
-          if [ -f Backend/coverage_comment.md ]; then \
+          if [ -f src/backend/coverage_comment.md ]; then \
             echo "## Coverage Summary" >> $GITHUB_STEP_SUMMARY; \
-            cat Backend/coverage_comment.md >> $GITHUB_STEP_SUMMARY; \
+            cat src/backend/coverage_comment.md >> $GITHUB_STEP_SUMMARY; \
           fi
 
       - name: Upload coverage XML
@@ -163,4 +163,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: backend-coverage-xml
-          path: Backend/coverage.xml
+          path: src/backend/coverage.xml
