--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -26,16 +26,16 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip"
-          cache-dependency-path: Backend/requirements-dev.txt
+          cache-dependency-path: src/backend/requirements-dev.txt
 
       - name: Install dependencies
-        working-directory: ./Backend
+        working-directory: ./src/backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
 
       - name: Run backend unit tests
-        working-directory: ./Backend
+        working-directory: ./src/backend
         env:
           LANGPLUG_SECRET_KEY: test-secret-key-for-ci-only-not-for-production-use
         run: |
@@ -55,15 +55,15 @@ jobs:
         with:
           node-version: "20"
           cache: "npm"
-          cache-dependency-path: Frontend/package-lock.json
+          cache-dependency-path: src/frontend/package-lock.json
 
       - name: Install frontend dependencies
-        working-directory: ./Frontend
+        working-directory: ./src/frontend
         run: |
           npm ci || echo "npm ci failed, trying npm install"
           npm install || echo "npm install failed, continuing anyway"
 
       - name: Run frontend unit tests
-        working-directory: ./Frontend
+        working-directory: ./src/frontend
         run: |
           npm run test -- --run --passWithNoTests || echo "Frontend tests failed, but continuing"
