fix: replace requirements-dev.txt with requirements.txt in all workflows
- Update all workflows to use requirements.txt instead of missing requirements-dev.txt
- Fix default working directories in GitHub Actions (Backend -> src/backend, Frontend -> src/frontend)
- Ensures workflows can find dependencies and complete successfully

--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -8,7 +8,7 @@ inputs:
   working-directory:
     description: "Working directory for Node.js operations"
     required: false
-    default: "./Frontend"
+    default: "./src/frontend"
   package-manager:
     description: "Package manager to use (auto, npm, yarn, pnpm)"
     required: false
