--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -26,13 +26,13 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip"
-          cache-dependency-path: src/backend/requirements-dev.txt
+          cache-dependency-path: src/backend/requirements.txt
 
       - name: Install Python dependencies
         working-directory: ./src/backend
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
+          pip install -r requirements.txt
 
       - name: Run Python linting
         working-directory: ./src/backend
