--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -29,13 +29,13 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip"
-          cache-dependency-path: src/backend/requirements-dev.txt
+          cache-dependency-path: src/backend/requirements.txt
 
       - name: Install Python dependencies
         working-directory: ./src/backend
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
+          pip install -r requirements.txt
           pip install bandit
 
       - name: Run Bandit security scan
